--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
@@ -14,10 +12,9 @@
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
     <center>
         <VBox alignment="CENTER">
-            <HBox alignment="CENTER">
-<!--                <TextField fx:id="movesListTextField"/>-->
-                <Button fx:id="startButton" minWidth="100" text="Start" onAction="#onSimulationStartClicked" />
-            </HBox>
+<!--            <HBox alignment="CENTER">-->
+<!--                <Button fx:id="startButton" minWidth="100" text="Start" onAction="#onSimulationStartClicked" />-->
+<!--            </HBox>-->
             <Label fx:id="moveInfoLabel" alignment="CENTER"/>
             <Label fx:id="infoLabel" text="All animals will be living here!" alignment="CENTER"/>
             <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER"  />
