--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.GridPane?>
 
 <BorderPane xmlns="http://javafx.com/javafx"
@@ -12,6 +10,7 @@
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
     <center>
         <VBox alignment="CENTER">
+            <Button fx:id="startStopButton" text="Start" onAction="#onStartStopButtonClicked" />
             <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER"  />
         </VBox>
     </center>
