--- a/oolab/src/main/resources/start.fxml
+++ b/oolab/src/main/resources/start.fxml
@@ -41,11 +41,14 @@
                 <Label text="Max Number Of Mutations:" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
                 <TextField fx:id="maxGeneMutation" promptText="Max Number Of Mutations" GridPane.columnIndex="1" GridPane.rowIndex="10" />
 
-                <Label text="Map Variant:" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
-                <TextField fx:id="MapVariant" promptText="Wariant mapy" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                <Label text="Length of Genome:" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+                <TextField fx:id="genomeLength" promptText="Length of Genome" GridPane.columnIndex="1" GridPane.rowIndex="11" />
 
-                <Label text="Behaviour Variant:" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
-                <TextField fx:id="BehaviourVariant" promptText="Wariant zachowania" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                <Label text="Map Variant:" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
+                <TextField fx:id="MapVariant" promptText="Wariant mapy" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+
+                <Label text="Behaviour Variant:" GridPane.columnIndex="0" GridPane.rowIndex="13"/>
+                <TextField fx:id="BehaviourVariant" promptText="Wariant zachowania" GridPane.columnIndex="1" GridPane.rowIndex="13" />
             </GridPane>
 
             <VBox spacing="10">
@@ -55,38 +58,5 @@
         </HBox>
     </center>
 </BorderPane>
-
-
-        <!--<?xml version="1.0" encoding="UTF-8"?>-->
-<!--<?import javafx.scene.control.*?>-->
-<!--<?import javafx.scene.layout.*?>-->
-<!--<BorderPane xmlns="http://javafx.com/javafx"-->
-<!--            xmlns:fx="http://javafx.com/fxml"-->
-<!--            minHeight="550.0" minWidth="850.0"-->
-<!--            fx:controller="agh.ics.oop.presenter.StartPresenter">-->
-<!--    <center>-->
-<!--        <VBox alignment="CENTER">-->
-<!--            <HBox alignment="CENTER">-->
-<!--                <TextField fx:id="widthField" promptText="Width" />-->
-<!--                <TextField fx:id="heightField" promptText="Height" />-->
-<!--                <TextField fx:id="startEnergyField" promptText="Animal Starting Energy" />-->
-<!--                <TextField fx:id="plantEnergyField" promptText="Animal energy Recieved From Eating Plant" />-->
-<!--                <TextField fx:id="initialanimalsNumberField" promptText="Initial Animals Number" />-->
-<!--                <TextField fx:id="initialgrassNumberField" promptText="Initial Grass Number" />-->
-<!--                <TextField fx:id="plantSpawnRate" promptText="Plant Spawn Rate" />-->
-<!--                <TextField fx:id="reproduceEnergy" promptText="Reproduce Energy" />-->
-<!--                <TextField fx:id="parentEnergy" promptText="Parent Energy" />-->
-<!--                <TextField fx:id="minGeneMutation" promptText="Min Number Of Mutations" />-->
-<!--                <TextField fx:id="maxGeneMutation" promptText="Max Number Of Mutations" />-->
-<!--                <TextField fx:id="MapVariant" promptText="Wariant mapy" />-->
-<!--                <TextField fx:id="BehaviourVariant" promptText="Wariant zachowania" />-->
-
-
-<!--                <Button fx:id="startButton" minWidth="100" text="Start Simulation" onAction="#onStartClicked" />-->
-<!--            </HBox>-->
-<!--            <Label fx:id="infoLabel" text="All animals will be living here!" alignment="CENTER"/>-->
-<!--        </VBox>-->
-<!--    </center>-->
-<!--</BorderPane>-->
 
 
