--- a/oolab/src/main/resources/start.fxml
+++ b/oolab/src/main/resources/start.fxml
@@ -4,7 +4,8 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.StartPresenter">
+            fx:controller="agh.ics.oop.presenter.StartPresenter"
+            stylesheets="@styles.css">
     <center>
         <HBox spacing="10">
             <GridPane hgap="10" vgap="5">
@@ -52,7 +53,6 @@
 
             <VBox spacing="10">
                 <Button fx:id="startButton" minWidth="150" text="Start Simulation" onAction="#onStartClicked" />
-                <Label fx:id="infoLabel" text="All animals will be living here!" alignment="CENTER"/>
             </VBox>
         </HBox>
     </center>
