--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -6,9 +6,9 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            minHeight="550.0" minWidth="850.0"
+            minHeight="550.0" minWidth="800.0"
             fx:controller="agh.ics.oop.presenter.SimulationPresenter"
-            stylesheets="@styles.css">
+            stylesheets="@simulationStyles.css">
     <center>
         <VBox alignment="CENTER">
             <Button fx:id="startStopButton" text="Start" onAction="#onStartStopButtonClicked" />
