--- a/oolab/src/main/resources/start.fxml
+++ b/oolab/src/main/resources/start.fxml
@@ -5,7 +5,7 @@
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
             fx:controller="agh.ics.oop.presenter.StartPresenter"
-            stylesheets="@styles.css">
+            stylesheets="@startStyles.css">
     <center>
         <HBox spacing="10">
             <GridPane hgap="10" vgap="5">
