--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -2,6 +2,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.GridPane?>
 
 <?import javafx.scene.control.Label?>
@@ -10,26 +11,26 @@
 <?import javafx.scene.chart.NumberAxis?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            minHeight="550.0" minWidth="800.0"
+            minHeight="800.0" minWidth="800.0"
             fx:controller="agh.ics.oop.presenter.SimulationPresenter"
             stylesheets="@simulationStyles.css">
     <center>
-        <VBox alignment="CENTER">
-            <Button fx:id="startStopButton" text="Start" onAction="#onStartStopButtonClicked" />
+        <HBox alignment="CENTER">
             <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="CENTER"  />
-            <Label text="Simulation Statistics:" />
-<LineChart fx:id="statisticsChart" prefHeight="200" prefWidth="800">
-    <xAxis>
-        <NumberAxis />
-    </xAxis>
-    <yAxis>
-        <NumberAxis />
-    </yAxis>
-</LineChart>
-            <Label text="Most Common Genotypes:" />
-            <TextField fx:id="mostCommonGenotypesField" editable="false" prefWidth="160" />
-        </VBox>
+            <VBox alignment="CENTER">
+                <Button fx:id="startStopButton" text="Start" onAction="#onStartStopButtonClicked" />
+                <Label text="Simulation Statistics:" />
+                <LineChart fx:id="statisticsChart" prefHeight="400" prefWidth="400">
+                    <xAxis>
+                        <NumberAxis />
+                    </xAxis>
+                    <yAxis>
+                        <NumberAxis />
+                    </yAxis>
+                </LineChart>
+                <Label text="Most Common Genotypes:" />
+                <TextField fx:id="mostCommonGenotypesField" editable="false" prefWidth="160" />
+            </VBox>
+        </HBox>
     </center>
 </BorderPane>
-
-
