--- a/oolab/src/main/resources/start.fxml
+++ b/oolab/src/main/resources/start.fxml
@@ -1,63 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.StartPresenter"
-            stylesheets="@startStyles.css">
-    <center>
-        <HBox spacing="10">
-            <GridPane hgap="10" vgap="5">
-                <Label text="Width:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <TextField fx:id="widthField" promptText="Width" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Height:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane minHeight="550.0" minWidth="850.0" stylesheets="@startStyles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="agh.ics.oop.presenter.StartPresenter">
+    <center>
+        <HBox prefHeight="583.0" prefWidth="431.0" spacing="10">
+            <GridPane hgap="10" prefHeight="593.0" prefWidth="408.0" vgap="10">
+                <Label text="Width:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="widthField" prefHeight="34.0" prefWidth="120.0" promptText="Width" GridPane.columnIndex="1" />
+
+                <Label text="Height:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <TextField fx:id="heightField" promptText="Height" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Animal Starting Energy:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+                <Label text="Animal Starting Energy:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <TextField fx:id="startEnergyField" promptText="Animal Starting Energy" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="Energy Received From Eating Plant:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+                <Label text="Energy Received From Eating Plant:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                 <TextField fx:id="plantEnergyField" promptText="Animal energy Received From Eating Plant" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Initial Animals Number:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+                <Label text="Initial Animals Number:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                 <TextField fx:id="initialanimalsNumberField" promptText="Initial Animals Number" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label text="Initial Grass Number:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+                <Label text="Initial Grass Number:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
                 <TextField fx:id="initialgrassNumberField" promptText="Initial Grass Number" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-                <Label text="Plant Spawn Rate:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+                <Label text="Plant Spawn Rate:" GridPane.rowIndex="6" />
                 <TextField fx:id="plantSpawnRate" promptText="Plant Spawn Rate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-                <Label text="Reproduce Energy:" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+                <Label text="Reproduce Energy:" GridPane.rowIndex="7" />
                 <TextField fx:id="reproduceEnergy" promptText="Reproduce Energy" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
-                <Label text="Parent Energy:" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
+                <Label text="Parent Energy:" GridPane.rowIndex="8" />
                 <TextField fx:id="parentEnergy" promptText="Parent Energy" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
-                <Label text="Min Number Of Mutations:" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
+                <Label text="Min Number Of Mutations:" GridPane.rowIndex="9" />
                 <TextField fx:id="minGeneMutation" promptText="Min Number Of Mutations" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
-                <Label text="Max Number Of Mutations:" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
+                <Label text="Max Number Of Mutations:" GridPane.rowIndex="10" />
                 <TextField fx:id="maxGeneMutation" promptText="Max Number Of Mutations" GridPane.columnIndex="1" GridPane.rowIndex="10" />
 
-                <Label text="Length of Genome:" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+                <Label text="Length of Genome:" GridPane.rowIndex="11" />
                 <TextField fx:id="genomeLength" promptText="Length of Genome" GridPane.columnIndex="1" GridPane.rowIndex="11" />
 
-                <Label text="Map Variant:" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
-                <ChoiceBox fx:id="MapVariant" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-                <Label text="Behaviour Variant:" GridPane.columnIndex="0" GridPane.rowIndex="13"/>
-                <ChoiceBox fx:id="BehaviourVariant" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-                <Label text="Generate CSV file?:" GridPane.columnIndex="0" GridPane.rowIndex="14"/>
-                <CheckBox fx:id="generateCsvCheckBox"  GridPane.columnIndex="1" GridPane.rowIndex="14"/>
+                <Label text="Map Variant:" GridPane.rowIndex="12" />
+                <ChoiceBox fx:id="MapVariant" prefHeight="44.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="12">
+               <effect>
+                  <Glow />
+               </effect></ChoiceBox>
+                <Label text="Behaviour Variant:" GridPane.rowIndex="13" />
+                <ChoiceBox fx:id="BehaviourVariant" prefHeight="44.0" prefWidth="173.0" GridPane.columnIndex="1" GridPane.rowIndex="13">
+               <effect>
+                  <Glow />
+               </effect></ChoiceBox>
+                <Label text="Generate CSV file?:" GridPane.rowIndex="14" />
+                <CheckBox fx:id="generateCsvCheckBox" GridPane.columnIndex="1" GridPane.rowIndex="14" />
+            <columnConstraints>
+               <ColumnConstraints />
+               <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
-
-            <VBox spacing="10">
-                <Button fx:id="startButton" minWidth="150" text="Start Simulation" onAction="#onStartClicked" />
-            </VBox>
+         <VBox prefHeight="583.0" prefWidth="176.0">
+                <Button fx:id="startButton" minWidth="150" onAction="#onStartClicked" prefHeight="30.0" prefWidth="175.0" text="Start Simulation" />
+                <TextField fx:id="loadConfigIdField" promptText="type configuration name"  />
+               <Button fx:id="loadConfigButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="175.0" text="Load configuration" />
+                <TextField fx:id="saveConfigNameField" promptText="type your new configuration name"  />
+               <Button fx:id="saveConfigButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="175.0" text="Save current configuration" />
+         </VBox>
         </HBox>
     </center>
 </BorderPane>
-
-
